[gd_scene load_steps=7 format=3 uid="uid://gb46soi7vgmx"]

[ext_resource type="Texture2D" uid="uid://bxcytu2p1emoc" path="res://sprites/Player/player.png" id="1_l5sl7"]
[ext_resource type="Script" path="res://scenes/Entities/Npc/npc.gd" id="1_ngqui"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6wof"]
radius = 150.12

[sub_resource type="Animation" id="Animation_i50mc"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.1, 0.1), Vector2(0.109, 0.099), Vector2(0.1, 0.1)]
}

[sub_resource type="Animation" id="Animation_kybbw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hnu27"]
_data = {
"Idle": SubResource("Animation_i50mc"),
"RESET": SubResource("Animation_kybbw")
}

[node name="Npc" type="CharacterBody2D"]
script = ExtResource("1_ngqui")

[node name="Shape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-18, -7, -36, -80, -33, -90, -22, -96, -26, -105, -26, -144, 26, -144, 26, -104, 22, -96, 34, -89, 37, -77, 19, -8, 0, 0)

[node name="Skin" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_l5sl7")
offset = Vector2(0, -900)

[node name="detected_area" type="Area2D" parent="."]
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="detected_area"]
position = Vector2(-5, -91)
shape = SubResource("CircleShape2D_x6wof")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hnu27")
}
autoplay = "Idle"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="detected_area" to="." method="_on_detected_area_body_entered"]
[connection signal="body_exited" from="detected_area" to="." method="_on_detected_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
